--- a/src/Group/Div/Div.html
+++ b/src/Group/Div/Div.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--
+        Define a division or section in a HTML document.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <div>
+        <p>Hola, mundo!</p>
+    </div>
 </body>
 </html>
