--- a/src/Group/Dl/Dl.html
+++ b/src/Group/Dl/Dl.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--
+        Represents a description list.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <dl>
+        <dt>Coche</dt>
+        <dd>Vehicle with four wheels</dd>
+        <dt>Motorbike</dt>
+        <dd>Vehicle with two wheels</dd>
+    </dl>
 </body>
 </html>
