--- a/src/Group/Figcaption/Figcaption.html
+++ b/src/Group/Figcaption/Figcaption.html
@@ -1,1 +1,24 @@
-html:5
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Figcaption tag</title>
+</head>
+<body>
+    <!--
+        Defines a caption for a figure tag.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <figure>
+        <img src="YinYang.jpg" alt="Yin Yang" style="width:100%">
+        <figcaption>Cool Yin Yang!</figcaption>
+      </figure>
+</body>
+</html>
