--- a/src/Group/Figure/Figure.html
+++ b/src/Group/Figure/Figure.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Figure tag</title>
 </head>
 <body>
-    
+    <!--
+        Specifies ilustrations, diagrams, photos, etc.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <figure>
+        <img src="YinYang.jpg" alt="Yin Yang" style="width:100%">
+        <figcaption>Cool Yin Yang!</figcaption>
+    </figure>
 </body>
 </html>
