--- a/src/Group/Hr/Hr.html
+++ b/src/Group/Hr/Hr.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hr tag</title>
 </head>
 <body>
-    
+    <!--
+        Define a line to separate.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <h1>Real Madrid Club de Fútbol</h1>
+
+    <p>El Real Madrid Club de Fútbol, más conocido simplemente como Real Madrid, es una entidad polideportiva con sede en Madrid, España... </p>
+
+    <hr>
+
+    <h1>Valencia Club de Fútbol</h1>
+
+    <p>El Valencia Club de Fútbol es un club de fútbol centenario, con sede en la ciudad de Valencia en España. Fue fundado el 18 de marzo de 1919...</p>
 </body>
 </html>
