--- a/src/Group/Li/Li.html
+++ b/src/Group/Li/Li.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Li tag</title>
 </head>
 <body>
-    
+    <!--
+        Define a lis item.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+            - value: specifies the initial number value, the others items will increment from that number.
+        Events:
+            - Global events
+    -->
+
+    <ol>
+        <li value="100">Mazda</li>
+        <li>Renault</li>
+        <li>Ford</li>
+        <li>Toyota</li>
+        <li>Honda</li>
+        <li>Seat</li>
+      </ol>
 </body>
 </html>
