--- a/src/Group/Main/Main.html
+++ b/src/Group/Main/Main.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main tag</title>
 </head>
 <body>
-    
+    <!--
+        This tag represents the main content of the document.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <main>
+        Main content of the document
+    </main>
 </body>
 </html>
