--- a/src/Group/P/P.html
+++ b/src/Group/P/P.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><p></title>
 </head>
 <body>
-    
+    <!--
+        Represents a paragraph.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <p>Hello world!</p>
 </body>
 </html>
