--- a/src/Group/Ul/Ul.html
+++ b/src/Group/Ul/Ul.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><ul></title>
 </head>
 <body>
-    
+    <!--
+        Defines a unordered list.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <ul>
+        <li>Real Madrid
+            <ul>
+                <li>Courtois</li>
+                <li>Carvajal</li>
+                <li>Militao</li>
+            </ul>
+        </li>
+        <li>Valencia</li>
+        <li>Getafe</li>
+        <li>Betis</li>
+    </ul>
 </body>
 </html>
