--- a/src/Ideogrammatics/Bdi/Bdi.html
+++ b/src/Ideogrammatics/Bdi/Bdi.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><bdi> Bdi tag</title>
 </head>
 <body>
-    
+    <!--
+        Isolates a text that might be formatted in a different direction from other text outside it.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <ul>
+        <li>User <bdi>hrefs</bdi>: 60 points</li>
+        <li>User <bdi>jdoe</bdi>: 80 points</li>
+        <li>User <bdi>إيان</bdi>: 90 points</li>
+    </ul>
 </body>
 </html>
