--- a/src/Ideogrammatics/Bdo/Bdo.html
+++ b/src/Ideogrammatics/Bdo/Bdo.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><bdo> - Bdo tag</title>
 </head>
 <body>
-    
+    <!--
+        Override the current text direction.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+            - dir: (ltr, rtl) is a required attribute and specify the direction of the text.
+        Events:
+            - Global events
+    -->
+
+    <p><bdo dir="rtl">Hello world!</bdo></p>  
 </body>
 </html>
