--- a/src/Ideogrammatics/Rt/Rt.html
+++ b/src/Ideogrammatics/Rt/Rt.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><Rt> - Rt tag</title>
 </head>
 <body>
-    
+    <!--
+        It's used to provide pronunciation, tranlation or traliteration information.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <ruby>
+        漢 <rt> ㄏㄢˋ </rt>
+    </ruby>
 </body>
 </html>
