--- a/src/Ideogrammatics/Rp/Rp.html
+++ b/src/Ideogrammatics/Rp/Rp.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><Rp> - Rp tag</title>
 </head>
 <body>
-    
+    <!--
+        It's used to provide parentheses around a ruby text.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <ruby>
+        漢 <rp>(</rp><rt>ㄏㄢˋ</rt><rp>)</rp>
+    </ruby>
 </body>
 </html>
