--- a/src/Ideogrammatics/Ruby/Ruby.html
+++ b/src/Ideogrammatics/Ruby/Ruby.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><Ruby> - Ruby tag</title>
 </head>
 <body>
-    
+    <!--
+        It's small extra text, attached to hte main text to indicate the pronunciation or meaning of the characters.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+        Events:
+            - Global events
+    -->
+
+    <ruby>
+        漢 <rt> ㄏㄢˋ </rt>
+    </ruby>
 </body>
 </html>
