--- a/src/Interactives/Details/Details.html
+++ b/src/Interactives/Details/Details.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="Details.js"></script>
+    <title><details> - Details tag</title>
 </head>
 <body>
-    
+    <!--
+        It's a control that show a details about a topic.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+            - open: with this attribute, el details is initial show.
+        Events:
+            - Global events
+            - toggle: event that handle when the details is open or close.
+    -->
+    <p id="state">Abierto</p><br /><br />
+
+    <details id="details" open>
+        Something small enough to escape casual notice.
+    </details>
+      
 </body>
 </html>
