--- a/src/Interactives/Dialog/Dialog.html
+++ b/src/Interactives/Dialog/Dialog.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><dialog> - Dialog tag</title>
 </head>
 <body>
-    
+    <!--
+        It's a control that represents a modal window.
+        Has complety compatibility with all browsers.
+
+        Attributes: 
+            - Global attributes.
+            - open: with this attribute, el details is initial show.
+        Events:
+            - Global events
+    -->
+
+    <dialog open>Ventana modal</dialog>
 </body>
 </html>
