--- a/src/Metadata/Base/Base.html
+++ b/src/Metadata/Base/Base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base target="_blank" href="http://www.example.com/page.html">
-    <title>Document</title>
+    <title><base> - Base tag</title>
 </head>
 <body>
     <!--
