--- a/src/Metadata/Link/Link.html
+++ b/src/Metadata/Link/Link.html
@@ -15,7 +15,7 @@
     <link href="MilkyMania.ttf" as="font" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <title>Document</title>
+    <title><link> - Link tag</title>
 </head>
 <body>
     <!--
