--- a/src/Metadata/Meta/Meta.html
+++ b/src/Metadata/Meta/Meta.html
@@ -13,7 +13,7 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title><meta> - Meta tag</title>
 </head>
 <body>
     <!--
