--- a/src/Multimedia/Area/Area.html
+++ b/src/Multimedia/Area/Area.html
@@ -28,7 +28,7 @@
             - Global events
     -->
 
-    <img src="Sistema-solar.jpg" id="myImage" alt="Planets" usemap="#planetmap">
+    <img src="../../../Shared/Images/Sistema-solar.jpg" id="myImage" alt="Planets" usemap="#planetmap">
 
     <map name="planetmap">
         <area shape="circle" coords="25, 200, 70" href="https://es.wikipedia.org/wiki/Sol" target="_blank" alt="Sol">
